[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/battle_menus/action_select.gd" type="Script" id=1]
[ext_resource path="res://ui/frame.png" type="Texture" id=2]
[ext_resource path="res://ui/font_12.tres" type="DynamicFont" id=4]

[node name="action_select" type="Control"]
margin_left = 332.0
margin_top = 290.0
margin_right = 372.0
margin_bottom = 330.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_1" type="NinePatchRect" parent="."]
margin_left = -38.0
margin_right = 98.0
margin_bottom = 32.0
texture = ExtResource( 2 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="move_1"]
margin_left = 8.0
margin_top = 12.0
margin_right = 168.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 4 )
text = "APPLEFIGHT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_2" type="NinePatchRect" parent="."]
margin_left = 98.0
margin_right = 234.0
margin_bottom = 32.0
texture = ExtResource( 2 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="move_2"]
margin_left = 8.0
margin_top = 12.0
margin_right = 168.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 4 )
text = "APPLEFIGHT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_3" type="NinePatchRect" parent="."]
margin_left = -38.0
margin_top = 32.0
margin_right = 98.0
margin_bottom = 64.0
texture = ExtResource( 2 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="move_3"]
margin_left = 8.0
margin_top = 12.0
margin_right = 168.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 4 )
text = "APPLEFIGHT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_4" type="NinePatchRect" parent="."]
margin_left = 98.0
margin_top = 32.0
margin_right = 234.0
margin_bottom = 64.0
texture = ExtResource( 2 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="move_4"]
margin_left = 8.0
margin_top = 12.0
margin_right = 168.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 4 )
text = "APPLEFIGHT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="switch" type="NinePatchRect" parent="."]
margin_left = 240.0
margin_right = 272.0
margin_bottom = 32.0
texture = ExtResource( 2 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="switch"]
margin_left = 10.0
margin_top = 12.0
margin_right = 170.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 4 )
text = "S"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="run" type="NinePatchRect" parent="."]
margin_left = 272.0
margin_right = 304.0
margin_bottom = 32.0
texture = ExtResource( 2 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="run"]
margin_left = 10.0
margin_top = 12.0
margin_right = 170.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 4 )
text = "R"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wait" type="NinePatchRect" parent="."]
margin_left = 240.0
margin_top = 32.0
margin_right = 272.0
margin_bottom = 64.0
texture = ExtResource( 2 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="wait"]
margin_left = 10.0
margin_top = 12.0
margin_right = 170.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 4 )
text = "W"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item" type="NinePatchRect" parent="."]
margin_left = 272.0
margin_top = 32.0
margin_right = 304.0
margin_bottom = 64.0
texture = ExtResource( 2 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="item"]
margin_left = 10.0
margin_top = 12.0
margin_right = 170.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 4 )
text = "I"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_info" type="NinePatchRect" parent="."]
margin_left = -38.0
margin_top = -70.0
margin_right = 304.0
margin_bottom = -4.0
texture = ExtResource( 2 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="row_1" type="Label" parent="move_info"]
margin_left = 12.0
margin_top = 12.0
margin_right = 84.0
margin_bottom = 26.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "RUN"

[node name="row_2" type="Label" parent="move_info"]
margin_left = 12.0
margin_top = 30.0
margin_right = 84.0
margin_bottom = 44.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Use an item from your "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="row_3" type="Label" parent="move_info"]
margin_left = 12.0
margin_top = 46.0
margin_right = 334.0
margin_bottom = 60.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "inventory"
__meta__ = {
"_edit_use_anchors_": false
}
